[project]
name = "loom"
version = "0.1.0"
description = "A collection of frequently used AI & Robotics modules"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Kanishk Navale", email = "navalekanishk@gmail.com" }]

dependencies = [
    "colorlog>=6.10.1",
    "duckdb>=1.5.2",
    "kornia>=0.8.2",
    "numpy>=2.4.4",
    "omegaconf>=2.3.0",
    "pydantic>=2.13.3",
    "pytorch-lightning>=2.6.1",
    "torch>=2.11.0",
    "unsloth>=2026.4.8",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "black>=26.3.1",
    "coverage>=7.13.5",
    "cython>=3.2.4",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "ty>=0.0.34",
    "wheel>=0.47.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["loom"]

[tool.hatch.build.targets.wheel]
packages = ["loom", "test"]

[tool.uv]
package = true

[tool.ruff]
line-length = 80
target-version = "py312"
fix = true
exclude = ["archive"]

[tool.ruff.lint]
extend-select = ["I", "PLE", "PLW"]

[tool.black]
line-length = 80
target-version = ["py314"]
exclude = '''
/(
 \.git
 | \.venv
 | \.github
 | \.vscode
 | build
 | dist
 | docs
 | archive
)/
'''

[tool.pytest.ini_options]
addopts = "--color=yes --durations=10"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["*/__version__.py", ".venv/*"]
branch = true
source = ["loom"]

[tool.coverage.report]
fail_under = 60
